<?xml version="1.0"?>
<package>
  <name>dlib_catkin</name>
  <version>0.0.0</version> 
  <description>dlib_catkin</description>
  <maintainer email="dev@titus-c.ch">tcies</maintainer>

  <license>Closed</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
</package>
